[gd_scene load_steps=12 format=3 uid="uid://db6q22rqqpgmi"]

[ext_resource type="Script" path="res://enemy.gd" id="1_qduc0"]
[ext_resource type="Texture2D" uid="uid://4u1ix4a5nhdb" path="res://Assets/Spaceship Sprites by Lowich/ships/Gray1.png" id="2_i5t81"]
[ext_resource type="Texture2D" uid="uid://be7knh1umx81i" path="res://Assets/Mini Pixel Pack 3/Mini Pixel Pack 3/Effects/Explosion (16 x 16).png" id="2_t1fgm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ira24"]
size = Vector2(16, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5pmp"]
atlas = ExtResource("2_t1fgm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs3kf"]
atlas = ExtResource("2_t1fgm")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d71sv"]
atlas = ExtResource("2_t1fgm")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt7lu"]
atlas = ExtResource("2_t1fgm")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5wl2"]
atlas = ExtResource("2_i5t81")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_47vlg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5pmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs3kf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d71sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt7lu")
}],
"loop": false,
"name": &"explode",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5wl2")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cjt18"]
radius = 240.169

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_qduc0")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ira24")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ira24")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = -3.14159
sprite_frames = SubResource("SpriteFrames_47vlg")
animation = &"explode"
frame = 3
frame_progress = 1.0

[node name="DetectionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_cjt18")

[node name="BulletSpawnPosition" type="Marker2D" parent="."]
position = Vector2(0, 7)

[node name="BulletFireRate" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="timeout" from="BulletFireRate" to="." method="_on_bullet_fire_rate_timeout"]
